make linter happy

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,4 @@
 ---
-
-- name: set clock to use local rtc (thanks windows -.-)
+- name: Set clock to use local rtc (thanks windows -.-)
   community.general.timezone:
     hwclock: local
